--- a/002 - JavaScript Language Fundamentals/js_sandbox/index.html
+++ b/002 - JavaScript Language Fundamentals/js_sandbox/index.html
@@ -9,6 +9,8 @@
 <body>
   <h1>JavaScript Sandbox: Section 2</h1>
 
+  <div style="margin-bottom: 1000px"></div>
+
   <script src="app.js"></script>
 </body>
 </html>
